2025-09-23  Zhengyi Fu  <i@fuzy.me>

	Do mode tagging for good-doc.el

	* site-lisp/good-doc.el (good-doc-goto-target, good-doc-go-back)
	(good-doc-go-forward, good-doc-next-entry)
	(good-doc-previous-entry, good-doc-goto-page)
	(good-doc-first-page, good-doc-last-page, good-doc-next-page)
	(good-doc-previous-page):

2025-09-23  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-disable): New command.

2025-09-22  Zhengyi Fu  <i@fuzy.me>

	Introduce doom-modeline

	* init.el (doom-modeline-gnus, doom-modeline-irc): Set to t.
	Enable `doom-modeline-mode'.
	Removed blackout configuration.
	* packages.el: Add doom-modeline.  Remove blackout.


2025-09-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Improve semel face customization.

2025-09-22  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Customize faces for semel.

2025-09-19  Zhengyi Fu  <i@fuzy.me>

	Remove eca

	* packages.el (eca): Remove package.
	* init.el: Remove configuration for eca.

2025-09-19  Zhengyi Fu  <i@fuzy.me>

	Update transient level of magit-log

	* transient/levels.el (magit-log): Set level of
	transient:magit-log-infix-arguments:--no-merges to 1.

2025-09-19  Zhengyi Fu  <i@fuzy.me>

	Add package `unfo-fu-session'

	* init.el: Enable `undo-fu-session-global-mode'.
	* packages.el:

2025-09-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/dotemacs-core.el (alist-setq!): Use `named-let'.
	(project-remove-hook!): Use defun instead of cl-defun.

2025-09-19  Zhengyi Fu  <i@fuzy.me>

	Refactor quick-window to use named-let and add hooks

	* site-lisp/quick-window.el (quick-window-jump): Replace cl-loop with
	named-let, remove cl-lib dependency, add pre-jump and post-jump hooks.
	(quick-window-pre-jump-hook, quick-window-post-jump-hook): New hooks.

2025-09-18  Zhengyi Fu  <i@fuzy.me>

	Improve ediff setup in gptel-tools

	* site-lisp/gptel-tools.el (gptel-tools--ediff-buffers): Ensure
	new buffer uses the same major mode as old buffer.

2025-09-18  Zhengyi Fu  <i@fuzy.me>
