@@ -1,5 +1,12 @@
 2025-09-23  Zhengyi Fu  <i@fuzy.me>
 
+	Fix font setting error on tty
+
+	* init.el (nerd-icons-set-font): Add advice to make it only take
+	effect in graphic display.
+
+2025-09-23  Zhengyi Fu  <i@fuzy.me>
+
 	Do mode tagging for good-doc.el
 
 	* site-lisp/good-doc.el (good-doc-goto-target, good-doc-go-back)
